# myailearnings

./: .gitignore  README  README.md  app.py  pdf_rag.py  pdf_rag_analyze_v1.ipynb  pdf_rag_analyze_v2.ipynb  pdf_rag_analyzer.ipynb  pdf_rag_ravi_multiple_docs.ipynb  pyproject.toml  try_pdf-rag.ipynb
data/: categorized_grocery_list.txt
resume_db/: chroma.sqlite3
resume_db_2/: chroma.sqlite3
