[tool.poetry]
name = "itsaiwork"
version = "0.1.0"
description = ""
authors = ["v.praveen"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ollama = "^0.4.3"
chromadb = "^0.5.23"
pdfplumber = "^0.11.4"
langchain = "^0.3.10"
langchain-core = "^0.3.22"
langchain-ollama = "^0.2.1"
langchain-community = "^0.3.10"
langchain-text-splitters = "^0.3.2"
unstructured = {extras = ["all-docs"], version = "^0.16.9"}
fastembed = "^0.4.2"
sentence-transformers = "^3.3.1"
elevenlabs = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
